[build-system]
requires = [
    "setuptools>=42",
    "versioningit",
    ]
build-backend = "setuptools.build_meta"

[tool.versioningit]

[tool.versioningit.vcs]
method = "git-archive"
# Honor all tags, exclude '*rc' tags:
describe-subst = "$Format:%(describe:tags,exclude=*rc)$"

[project]
name="ttsmutility"
authors = [
    {name = "Marcus Kellerman", email="sharkus@gmail.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
license = {text = "GPLv3"}
dependencies = [
    "textual>=0.29.0",
    "xdg-base-dirs",
    "Pillow",
    "requests",
    "markdownify",
]

[project.urls]
Repository = "https://github.com/sharkusk/ttsmutility"

[project.optional-dependencies]
dev = [
    "textual-dev",
]

[project.scripts]
ttsmutility = "ttsmutility.TTSMutility:run"