[build-system]
requires = [
    "setuptools>=46.4.0",
    "versioningit",
    ]
build-backend = "setuptools.build_meta"

[tool.versioningit]

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe:tags)$"

[project]
name="ttsmutility"
authors = [
    {name = "Marcus Kellerman", email="sharkus@gmail.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
license = {text = "GPLv3"}
dependencies = [
    "textual>=0.30.0",
    "xdg-base-dirs",
    "Pillow",
    "requests",
    "markdownify",
]

[project.urls]
Repository = "https://github.com/sharkusk/ttsmutility"

[project.optional-dependencies]
dev = [
    "textual-dev",
    "pytest",
    "flake8",
]

[project.scripts]
ttsmutility = "ttsmutility.TTSMutility:run"